Test the module switches read from the JVM commandline
The six module switches ModulePathInfo reports are only read from the
commandline of the JVM that was launched with them, so exercise them by
launching a child JVM with each switch and printing what it read back.